--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "sanitize-html": "^2.11.0"
   }
 }
